# musictheory

./: .gitignore  CHANGELOG.md  LICENSE  chord-exercises.cabal  musictheory.cabal
src/: MusicTheory.hs  Util.hs
src/ChordExercises/: Note.hs  Scale.hs  Util.hs
src/app/: Cmdline.hs  Exercises.hs  Main.hs
src/app/Exercises/: Chords.hs  Lilypond.hs  Progressions.hs
src/app/Exercises/Chords/: Basic.hs  FourWayClose.hs  Ninth.hs  StdJazz.hs
src/app/Exercises/Lilypond/: Style.hs
src/app/Exercises/Progressions/: FourWayClose.hs  StdJazz.hs
src/app/Exercises/Util/: ChordInversion.hs  TypeAB.hs
src/lilypond/: Lilypond.hs
src/lilypond/Lilypond/: Markup.hs  Part.hs  Render.hs
src/lilypond/Lilypond/Render/: Monad.hs
src/lilypond/Lilypond/Util/: Doc.hs  Pretty.hs
src/musictheory/: MusicTheory.hs
src/musictheory/MusicTheory/: Chord.hs  Interactive.hs  Interval.hs  Note.hs  Progression.hs  Reference.hs  Scale.hs  Util.hs
src/musictheory/MusicTheory/Chord/: Name.hs  Named.hs  Type.hs  Unnamed.hs  Voicing.hs
src/musictheory/MusicTheory/Note/: Octave.hs
src/musictheory/MusicTheory/Progression/: Name.hs
src/musictheory/MusicTheory/Util/: StringTable.hs
