cabal-version:   3.0
name:            music-theory-exercises
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Edsko de Vries
maintainer:      edsko@edsko.net
build-type:      Simple
extra-doc-files: CHANGELOG.md

common lang
  build-depends:    base >= 4.20 && < 5
  default-language: GHC2024

  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages

  default-extensions:
      DerivingVia
      DuplicateRecordFields
      MagicHash
      OverloadedRecordDot
      OverloadedStrings

library musictheory
  import:         lang
  hs-source-dirs: src/musictheory

  exposed-modules:
      MusicTheory.Chord
      MusicTheory.Note
      MusicTheory.Scale

  other-modules:
      MusicTheory.Util

  build-depends:
    , mtl >= 2.3 && < 2.4

library lilypond
  import:         lang
  hs-source-dirs: src/lilypond

  exposed-modules:
      Lilypond
      Lilypond.Render

  other-modules:
      Lilypond.Util.Pretty

  build-depends:
      -- Internal dependencies
    , musictheory

  build-depends:
      -- External dependencies
    , data-default >= 0.8 && < 0.9

executable music-theory-exercises
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: src/app

  build-depends:
      -- Internal dependencies
    , musictheory
    , lilypond

  build-depends:
      -- Inherited dependencies
    , data-default

  build-depends:
      -- External dependencies
    , filepath             >= 1.5  && < 1.6
    , optparse-applicative >= 0.19 && < 0.20

  other-modules:
      Cmdline
      Exercises
      Exercises.Chords.Basic
