cabal-version:   3.0
name:            music-theory-exercises
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Edsko de Vries
maintainer:      edsko@edsko.net
build-type:      Simple
extra-doc-files: CHANGELOG.md

common lang
  build-depends:    base >= 4.20 && < 5
  default-language: GHC2024

  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages

  default-extensions:
      DerivingVia
      DuplicateRecordFields
      MagicHash
      OverloadedRecordDot
      OverloadedStrings
      TypeFamilies
      UndecidableInstances

library musictheory
  import:         lang
  hs-source-dirs: src/musictheory

  other-extensions:
      OverloadedLists

  exposed-modules:
      -- Listed first, for use in @cabal repl@
      MusicTheory.Interactive

      MusicTheory
      MusicTheory.Chord
      MusicTheory.Chord.Named
      MusicTheory.Chord.Unnamed
      MusicTheory.Note
      MusicTheory.Note.Octave
      MusicTheory.Progression
      MusicTheory.Reference
      MusicTheory.Scale
      MusicTheory.Util.StringTable

  other-modules:
      MusicTheory.Util

  build-depends:
    , containers >= 0.7 && < 0.8

library lilypond
  import:         lang
  hs-source-dirs: src/lilypond

  exposed-modules:
      Lilypond
      Lilypond.Markup
      Lilypond.Render
      Lilypond.Util.Doc

  other-modules:
      Lilypond.Render.Monad

  build-depends:
      -- Internal dependencies
    , musictheory

  build-depends:
      -- Inherited dependencies
    , mtl

  build-depends:
      -- External dependencies
    , data-default >= 0.8 && < 0.9

executable music-theory-exercises
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: src/app

  build-depends:
      -- Internal dependencies
    , musictheory
    , lilypond

  build-depends:
      -- Inherited dependencies
    , data-default

  build-depends:
      -- External dependencies
    , filepath             >= 1.5  && < 1.6
    , optparse-applicative >= 0.19 && < 0.20

  other-modules:
      Cmdline
      Exercises
      Exercises.Chords
      Exercises.Chords.Basic
      Exercises.Chords.StdJazz
      Exercises.Lilypond
      Exercises.Lilypond.Style
      Exercises.Progressions
      Exercises.Progressions.StdJazz
